Remove deprecated Kandinsky image generation module and refactor routing
- Deleted the `fusionbrain_kandinsky.py` file as it is no longer needed.
- Updated `main.py` to include the new `KandinskyGeneratorRouter` for handling Kandinsky image generation requests.
- Introduced `kandinsky_generator.py` to manage the Kandinsky generation logic within the new router.
- Added Pydantic schemas for request and response handling in `kandinsky_generator.py`.
- Implemented error handling specific to Kandinsky generation in `kandinsky_generator.py`.
- Created a new service class `KandinskyGeneratorService` to encapsulate the image generation logic.
- Updated `pyproject.toml` and `uv.lock` to reflect changes in dependencies and development tools.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,55 @@ dependencies = [
     "fusionbrain-sdk-python>=0",
     "pydantic-settings>=2.0.0",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.11",
+]
+
+[tool.ruff]
+# Ограничение длины строки (как у Black)
+line-length = 88
+# Целевая версия Python
+target-version = "py312"
+
+# Автофикс при запуске `ruff check --fix`
+fix = true
+
+# Игнорируем служебные папки
+exclude = [
+    ".git",
+    ".venv",
+    "__pycache__",
+    "build",
+    "dist",
+]
+
+[tool.ruff.format]
+# тут можно управлять стилем кавычек, отступов и пр.
+# форматер включается автоматически, отдельного поля "format" нет
+quote-style = "double"       # "single" или "double"
+indent-style = "space"       # "space" или "tab"
+skip-magic-trailing-comma = false
+line-ending = "lf"
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "I",   # isort (импорт)
+    "B",   # flake8-bugbear
+    "UP",  # pyupgrade
+    "N",   # pep8-naming
+    "ANN", # аннотации типов
+]
+
+ignore = [
+    "ANN101",  # не требовать аннотацию self
+    "ANN102",  # не требовать аннотацию cls
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["src"]
+combine-as-imports = true
+force-single-line = false
