--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "gigachat>=0",
     "fusionbrain-sdk-python>=0",
     "pydantic-settings>=2.0.0",
+    "loguru>=0.7.0",
 ]
 
 [dependency-groups]
