--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,14 @@ GIGACHAT_AUTH_KEY=
 GIGACHAT_CLIENT_SECRET=
 GIGACHAT_CLIENT_ID=
 GIGACHAT_SCOPE=
-GIGACHAT_VERIFY_SSL=
+GIGACHAT_VERIFY_SSL=0
 
-# FUSION BRAIN
+# FUSIONBRAIN
 FB_API_KEY=
 FB_API_SECRET=
+
+# MESHY
+MESHY_API_KEY=
 
 # IMAGE PATH FOR SIMPLE GENERATOR
 IMAGES_OUT_DIR="output/images"
